# firstCRUD

./: alembic.ini  main.py  pyproject.toml  requirements.txt
Database/: PetOrm.py  PetRepo.py  UserOrm.py  UserRepo.py  core.py
Dtos/: PetDTO.py  UserDTO.py
Routers/: PetRouter.py  UserRouter.py
migrations/: env.py
migrations/versions/: 83ca1c23abbf_.py
